syntax = "proto3";

package train_booking;
option go_package = "trainbooking/trainbookingpb";
import "google/api/annotations.proto";

service TrainTicketService {
    rpc SubmitPurchase(stream PurchaseRequest) returns (stream PurchaseResponse) {
        option (google.api.http) = {
            post: "/v1/Purchase"
            body: "*"
        };
    }

    rpc GetTicketDetails(GetTicketRequest) returns (GetTicketResponse) {
        option (google.api.http) = {
            get: "/v1/ticket/{userId}"
        };
    }

    rpc GetUsersBySection(GetUsersBySectionRequest) returns (GetUsersBySectionResponse) {
        option (google.api.http) = {
            get: "/v1/users/section/{section}"
        };
    }

    rpc RemoveUser(RemoveUserRequest) returns (RemoveUserResponse) {
        option (google.api.http) = {
            delete: "/v1/user/{userId}"
        };
    }

    rpc ModifySeat(ModifySeatRequest) returns (ModifySeatResponse) {
        option (google.api.http) = {
            put: "/v1/user/{userId}/seat"
            body: "*"
        };
    }
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
}

message PurchaseRequest {
    User user = 1;
    string from = 2;
    string to = 3;
}

message PurchaseResponse {
    string ticketId = 1;
    string from = 2;
    string to = 3;
    User user = 4;
    float price = 5;
    string SeatNumber = 6;
    string section = 7;
}

message GetTicketRequest {
    string userId = 1;
}

message GetTicketResponse {
    string ticketId = 1;
    string from = 2;
    string to = 3;
    User user = 4;
    float price = 5;
    string SeatNumber = 6;
    string section = 7;
}

message GetUsersBySectionRequest {
    string section = 1;
}

message GetUsersBySectionResponse {
    repeated UserWithSeat users = 1;
}

message UserWithSeat {
    User user = 1;
    string SeatNumber = 2;
}

message RemoveUserRequest {
    string userId = 1;
}

message RemoveUserResponse {
    bool success = 1;
}

message ModifySeatRequest {
    string userId = 1;
    string newSeatNumber = 2;
}

message ModifySeatResponse {
    bool success = 1;
}
